# zyp-ocr

./: .env.example  .gitignore  .prettierignore  .rumdl.toml  README.md  eslint.config.ts  justfile  knip.json  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.ts  pyproject.toml  pyrefly.toml  ruff.toml  tsconfig.json  tsconfig.tooling.json
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml  claude-pr-summary.yml  claude.yml
apps/web/: .dockerignore  Containerfile  drizzle.config.ts  eslint.config.js  eslint.config.ts  package.json  prettier.config.js  tsconfig.app.json  tsconfig.bun.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  worker-configuration.d.ts  wrangler.jsonc
apps/web/drizzle/: 0000_early_smiling_tiger.sql  0000_old_hulk.sql  0000_received_results.sql
apps/web/drizzle/20260509102416_received_results/: snapshot.json
apps/web/drizzle/20260513071137_initial/: migration.sql  snapshot.json
apps/web/drizzle/20260513081531_initial/: migration.sql  snapshot.json
apps/web/drizzle/meta/: 0000_snapshot.json  _journal.json
apps/web/src/: constants.ts  contracts.ts  router.tsx  server.ts
apps/web/src/client/: jobs-collection.ts  markdown.tsx  ocr-jobs-collection.ts
apps/web/src/durable-objects/: migrations.ts  schema.ts  user-do.sql  user-do.ts  user-store.ts  wire.ts
apps/web/src/lib/: callback-token.test.ts  callback-token.ts  error.ts  pdf-pages.test.ts  pdf-pages.ts  result-token.ts  s3.ts
apps/web/src/routes/: __root.tsx  index.tsx
apps/web/src/routes/jobs/: $jobId.tsx
apps/web/src/routes/ocr-jobs/: $ocrJobId.tsx
apps/web/src/server-fns/: uploads.ts
apps/web/tests/client/: markdown.test.tsx
apps/web/tests/durable-objects/: _db.ts  _fixtures.ts  user-store.test.ts
apps/web/tests/lib/: pdf-pages.test.ts  result-token.test.ts
apps/web/tests/stories/: 1-ocr-job-lifecycle.md  1-ocr-job-lifecycle.test.ts
infra/: compose.dev.yaml  compose.mock.yaml  compose.yaml
plan/: project-structure.md  totvibe-ocr-decision-log.md  totvibe-ocr.md
plan/board/: README.md  board.md  board.watchregen.py
plan/board/doing/: 003-presigned-r2-uploads-with-tanstack-start.md  004-pr3-review-comments.md
plan/board/done/: 001-proj-struct.md  002-post-skeleton.md
plan/board/todo/: 004-pr3-review-comments.md
plan/doing/: 003-presigned-r2-uploads-with-tanstack-start.md
plan/done/: 001-proj-struct.md
plan/idea/server-client-live-updates/: Real-Time Edge Updates for PostgreSQL.md  do-sqlite-callbacks.md
plan/todo/: post-skeleton.md
scripts/: codegen_runner.py  export_schemas.lefthook.py  export_schemas.py  seed_minio.py
services/pipeline-api/: .dockerignore  Containerfile  pyproject.toml
services/pipeline-api/src/pipeline_api/: __init__.py  __main__.py  app.py  callbacks.py  config.py  mock.py  ocr.py  persistence.py  routes.py  schemas.py  storage.py
services/pipeline-api/tests/: test_e2e_mock.py  test_health.py
services/transcription-api/: Containerfile  pyproject.toml
services/transcription-api/src/transcription_api/: __init__.py  __main__.py  app.py  config.py  mock.py  ocr.py  persistence.py  results.py  routes.py  schemas.py  storage.py
services/transcription-api/tests/: test_e2e_mock.py  test_health.py
services/transcription-api/tests/stories/: 1_transcription_service.md  test_1_transcription_service.py
tests/: package.json  tsconfig.json
tests/src/project/: catalog-discipline.test.ts
