[project]
name = "totvibe-ocr"
version = "0"
description = "Totvibe-OCR — virtual workspace root"
requires-python = ">=3.14"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["services/*"]

[dependency-groups]
lint = [
    "ruff>=0.14",
]
type = [
    "ty>=0.0.1",
]
test = [
    "pytest>=8.4",
    "pytest-asyncio>=1.2",
    "httpx>=0.28",
]
dev = [
    {include-group = "lint"},
    {include-group = "type"},
    {include-group = "test"},
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S"]
"scripts/**" = ["S"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["services/*/tests"]
