[project]
name = "totvibe-ocr"
version = "0"
description = "Totvibe-OCR — virtual workspace root"
requires-python = ">=3.14"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["services/*"]

[tool.vulture]
paths = ["services/transcription-api/src", "services/transcription-api/tests", "scripts"]
exclude = ["schemas.py"]
ignore_decorators = ["@app.get", "@router.get", "@router.post"]
ignore_names = ["pytestmark"]

[dependency-groups]
lint = [
    "ruff>=0.15.20",
    "rumdl>=0.2.27",
    "vulture>=2.16",
    "zyplux-cerberus>=0.7.0",
]
type = [
    "pyrefly>=1.1.1",
]
test = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "httpx>=0.28.1",
]
dev = [
    {include-group = "lint"},
    {include-group = "type"},
    {include-group = "test"},
    "lefthook>=2.1.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=transcription_api --cov-report=term-missing"
testpaths = ["services/*/tests"]

[tool.coverage.report]
fail_under = 90
