[project]
name = "transcription-api"
version = "0.0.0"
description = "Totvibe-OCR transcription service: glmocr SDK + FastAPI + asyncio."
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.49.0",
    "pydantic>=2.13.4",
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "python-ulid>=3.1.0",
]

[project.optional-dependencies]
# glmocr's `selfhosted` extra brings torch+transformers+pypdfium2 (the OCR ML stack).
# PP-DocLayoutV3 / paddlepaddle-gpu had no cp314 wheels at scaffolding time; if
# the SDK ends up needing paddle, add it back when wheels exist.
ocr = [
    "glmocr[selfhosted]>=0.1.5",
]

[project.scripts]
transcription-api = "transcription_api.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transcription_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyrefly]
project-includes = ["src"]
python-interpreter-path = "../../.venv/bin/python3"
